--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,16 @@
 .app-container {
   padding: 64px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-talk {
+  
 }
 
 .talks {
+  margin-top: 4rem;
   max-width: 500px;
   display: flex;
   flex-direction: column;
